--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "128": "icon128.png"
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon16.png",
     "default_popup": "popup.html"
   },
   "background": {
