--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "ChatGPT Prompts Manager",
   "version": "1.0",
   "description": "Manage prompts for ChatGPT",
@@ -8,25 +8,40 @@
     "48": "icon48.png",
     "128": "icon128.png"
   },
-  "browser_action": {
-    "default_popup": "popup.html",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "storage",
+    "sidePanel",
+    "bookmarks",
+    "unlimitedStorage", 
+    "contextMenus", 
+    "identity"
+  ],
+   "side_panel": {
+    "default_path": "newsidebar.html"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js", "newsidebar.js", "popup.js"
+      ],
+      "run_at": "document_end"
+    }
+  ],
+  "action": {
+
     "default_icon": {
       "16": "icon16.png",
       "48": "icon48.png",
       "128": "icon128.png"
     }
   },
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
-  "permissions": ["tabs", "activeTab", "storage"],
-  "options_page": "options.html",
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_end"
-    }
-  ]
+  "content_security_policy": {}
 }
